added dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
     --font-IBM: "IBM Plex Sans", sans-serif;
     --font-Inter: "Inter", sans-serif;
+
 }
+
+@layer components{
+    .darkTheme {
+        background-color: #32384b;
+    }
+
+    .lightTheme{
+        background-color: white;
+    }
+}
+
